--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>mHome &mdash; your home, your freedom</title>
   </head>
   <body class="container">
-    <div class="sidebar">SideBar</div>
+    <div class="sidebar"><button class="nav-btn"></button></div>
 
     <header class="header">Header</header>
 
@@ -284,11 +284,7 @@
         <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
         <li class="nav__item"><a href="#" class="nav__link">Come work with us!</a></li>
       </ul>
-      <p class="copyright">
-        &copy; Copyright 2017 by Jonas Schmedtmann. Feel free to use this project for your own
-        purposes. This does NOT apply if you plan to produce your own course or tutorials based on
-        this project.
-      </p>
+      <p class="copyright">&copy; 2018</p>
     </footer>
   </body>
 </html>
